# household-ledger

./: .cursorrules  .dockerignore  .env  .env.local  .gitignore  .prettierignore  .prettierrc  AGENTS.md  APP_TODO.md  CHANGELOG.md  CODE_QUALITY_SUMMARY.md  CODE_REVIEW_CHECKLIST.md  CURSOR-RULE.md  DATABASE.md  DEVELOPMENT.md  DEVELOPMENT_WORKFLOW.md  Dockerfile  FUNCTION.md  GOAL.md  PERFORMANCE_OPTIMIZATION.md  PROJECT_STATUS.md  PROMPT-GUIDE.md  README.md  SECURITY.md  SENTRY_SETUP.md  SETUP.md  STATUS.md  STYLE_GUIDE.md  TODO.md  WORK_PROGRESS.md  check_user.js  cookies.txt  env.example  eslint.config.mjs  fix-eslint.js  fix_ledger.js  fix_ledger_structure.js  fly.toml  jest.config.js  jest.setup.js  (+16 more)
household-ledger-backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  QUICKSTART.md  README.md  docker-compose.yml  fly.toml
household-ledger-backend/migrations/: 001_initial_schema.sql
household-ledger-backend/src/api/: health.rs  mod.rs
household-ledger-backend/src/api/middleware/: mod.rs
household-ledger-backend/src/api/v2/: auth.rs  mod.rs  transactions.rs
household-ledger-backend/src/application/services/: auth_service.rs  category_service.rs  group_service.rs  mod.rs  transaction_service.rs
household-ledger-backend/src/domain/: mod.rs
household-ledger-backend/src/domain/models/: auto_category_rule.rs  category.rs  exchange_rate.rs  (+6 more)
household-ledger-backend/src/errors/: app_error.rs
household-ledger-backend/src/infrastructure/: mod.rs
household-ledger-backend/src/schemas/: auth.rs
household-ledger-backend/src/utils/: mod.rs
(+394 files in other folders)
