[package]
name = "household-ledger-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# 웹 프레임워크
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# 데이터베이스
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "chrono", "json", "migrate"] }
mysql_async = "0.37"

# 인증 및 보안
jsonwebtoken = "9.2"
bcrypt = "0.15"
argon2 = "0.5"

# 직렬화
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 검증
validator = { version = "0.18", features = ["derive"] }

# 실시간 통신
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# 환경 변수
dotenv = "0.15"

# 로깅
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 날짜/시간
chrono = { version = "0.4", features = ["serde"] }

# 에러 처리
anyhow = "1.0"
thiserror = "1.0"

# HTTP 클라이언트 (외부 API 호출)
reqwest = { version = "0.11", features = ["json"] }

# 파일 업로드
multer = "3.0"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# 비동기 트레이트
async-trait = "0.1"

# Decimal 타입
rust_decimal = { version = "1.33", features = ["serde-with-str"] }

[dev-dependencies]
# 테스트
mockall = "0.12"
tokio-test = "0.4"

